// style guide https://developers.google.com/protocol-buffers/docs/style
// language guide proto3 https://developers.google.com/protocol-buffers/docs/proto3
// wcf to grpc guide https://docs.microsoft.com/en-us/dotnet/architecture/grpc-for-wcf-developers
syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "Lokman.Protos";
option optimize_for = SPEED;

package lokman;

message LockRequest{
    string key = 1;
    google.protobuf.Duration duration = 2;
    int64 token = 3;

}
message LockResponse{
    string key = 1;
    int64 token = 2;
}

service DistributedLockService {
    // this experimental api, with worse perfomance than regular grpc api
    // but can be used in tests/scripts etc (not in benchmarks)
    // https://cloud.google.com/service-infrastructure/docs/service-management/reference/rpc/google.api#google.api.HttpRule
    rpc Lock(LockRequest) returns (LockResponse){
        option (google.api.http) = {
            post: "/v1/lock"
            body: "*"
        };
    }
}